deploy/argocd/apps/cilium-monitoring/kustomize/hubble-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    # cert-manager will create hubble-ui-tls secret in kube-system
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
    kind: Gateway
    sectionName: https
  hostnames:
  - "hubble.gigix"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hubble-ui
      port: 80
