deploy/argocd/apps/cilium-monitoring/kustomize/hubble-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: istio
  rules:
  - host: hubble.gigix
    http:
      paths:
      - backend:
          service:
            name: hubble-ui
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - hubble.gigix
    secretName: hubble-ui-tls
